package ch12_05;

/**
 * program: java-learn->IAdvice
 * description: 通知接口及实现
 * author: gerry
 * created: 2020-03-19 22:26
 **/
public interface IAdvice {

    /**
     * 通知只有一个方法，执行即可
     */
    public void exec();
}
