package ch12_05;

/**
 * program: java-learn->Subject
 * description: 抽象主题
 * author: gerry
 * created: 2020-03-19 22:17
 **/
public interface Subject {

    /**
     * 业务操作
     * @param str
     */
    public void doSomething(String str);
}
